--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "solc": "^0.8.20",
+    "truffle": "^5.11.1",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.4"
